--- a/wp-content/themes/webalio/static/src/sass/blocks/navbar.scss
+++ b/wp-content/themes/webalio/static/src/sass/blocks/navbar.scss
@@ -133,6 +133,7 @@
 
     &.sticky {
         position: fixed;
+        top: 0;
         z-index: 1000;
     }
 }
